added sentiment analysis with a baseline classification and LSTMs, images

--- a/04. Notebooks/02. Word2Vec implementation in Python using Tensorflow.ipynb
+++ b/04. Notebooks/02. Word2Vec implementation in Python using Tensorflow.ipynb
@@ -2,14 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/bb/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'she', 'royal', 'is', 'queen', 'he', 'king', 'the'}\n"
+      "{'she', 'royal', 'is', 'king', 'the', 'queen', 'he'}\n"
      ]
     }
    ],
@@ -32,16 +40,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n",
-      "is\n"
+      "5\n",
+      "queen\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'she': 0, 'royal': 1, 'is': 2, 'king': 3, 'the': 4, 'queen': 5, 'he': 6}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -54,12 +72,15 @@
     "    int2word[i] = word\n",
     "\n",
     "print(word2int['queen'])\n",
-    "print(int2word[2])"
+    "print(int2word[5])\n",
+    "\n",
+    "int2word\n",
+    "word2int"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -89,48 +110,58 @@
       "text/plain": [
        "[['he', 'is'],\n",
        " ['he', 'the'],\n",
+       " ['he', 'king'],\n",
        " ['is', 'he'],\n",
        " ['is', 'the'],\n",
        " ['is', 'king'],\n",
        " ['the', 'he'],\n",
        " ['the', 'is'],\n",
        " ['the', 'king'],\n",
+       " ['king', 'he'],\n",
        " ['king', 'is'],\n",
        " ['king', 'the'],\n",
        " ['the', 'king'],\n",
        " ['the', 'is'],\n",
+       " ['the', 'royal'],\n",
        " ['king', 'the'],\n",
        " ['king', 'is'],\n",
        " ['king', 'royal'],\n",
        " ['is', 'the'],\n",
        " ['is', 'king'],\n",
        " ['is', 'royal'],\n",
+       " ['royal', 'the'],\n",
        " ['royal', 'king'],\n",
        " ['royal', 'is'],\n",
        " ['she', 'is'],\n",
        " ['she', 'the'],\n",
+       " ['she', 'royal'],\n",
+       " ['she', 'queen'],\n",
        " ['is', 'she'],\n",
        " ['is', 'the'],\n",
        " ['is', 'royal'],\n",
+       " ['is', 'queen'],\n",
        " ['the', 'she'],\n",
        " ['the', 'is'],\n",
        " ['the', 'royal'],\n",
        " ['the', 'queen'],\n",
+       " ['royal', 'she'],\n",
        " ['royal', 'is'],\n",
        " ['royal', 'the'],\n",
        " ['royal', 'queen'],\n",
+       " ['queen', 'she'],\n",
+       " ['queen', 'is'],\n",
        " ['queen', 'the'],\n",
        " ['queen', 'royal']]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data  =  []\n",
-    "WINDOW_SIZE  = 2\n",
+    "WINDOW_SIZE  = 4\n",
     "\n",
     "def to_one_hot(data_point_index, vocab_size):\n",
     "    temp = np.zeros(vocab_size)\n",
@@ -143,19 +174,64 @@
     "            if nb_word != word:\n",
     "                data.append([word, nb_word])\n",
     "\n",
+    "len(data)\n",
     "data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(34, 7) (34, 7)\n"
+      "[[0. 0. 1. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 1. 0. 0.]\n",
+      " [0. 0. 0. 1. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 1.]\n",
+      " [0. 0. 0. 0. 1. 0. 0.]\n",
+      " [0. 0. 0. 1. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 1.]\n",
+      " [0. 0. 1. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 1. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 1.]\n",
+      " [0. 0. 1. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 1. 0. 0.]\n",
+      " [0. 0. 0. 1. 0. 0. 0.]\n",
+      " [0. 0. 1. 0. 0. 0. 0.]\n",
+      " [0. 1. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 1. 0. 0.]\n",
+      " [0. 0. 1. 0. 0. 0. 0.]\n",
+      " [0. 1. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 1. 0. 0.]\n",
+      " [0. 0. 0. 1. 0. 0. 0.]\n",
+      " [0. 1. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 1. 0. 0.]\n",
+      " [0. 0. 0. 1. 0. 0. 0.]\n",
+      " [0. 0. 1. 0. 0. 0. 0.]\n",
+      " [0. 0. 1. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 1. 0. 0.]\n",
+      " [0. 1. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 1. 0.]\n",
+      " [1. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 1. 0. 0.]\n",
+      " [0. 1. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 1. 0.]\n",
+      " [1. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 1. 0. 0. 0. 0.]\n",
+      " [0. 1. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 1. 0.]\n",
+      " [1. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 1. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 1. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 1. 0.]\n",
+      " [1. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 1. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 1. 0. 0.]\n",
+      " [0. 1. 0. 0. 0. 0. 0.]]\n",
+      "(44, 7) (44, 7)\n"
      ]
     }
    ],
@@ -168,6 +244,9 @@
     "\n",
     "x_train = np.asarray(x_train)\n",
     "y_train = np.asarray(y_train)\n",
+    "\n",
+    "#print(x_train)\n",
+    "print(y_train)\n",
     "\n",
     "print(x_train.shape, y_train.shape)"
    ]
